_sass/_layout.scss
/**
 * Site header
 */
.site-header {
    border-top: 5px solid $grey-color-dark;
    border-bottom: 1px solid $grey-color-light;
    min-height: 56px;

    // Positioning context for the mobile navigation icon
    position: relative;
}

.site-title {
    font-size: 26px;
    line-height: 56px;
    letter-spacing: -1px;
    margin-bottom: 0;
    float: left;

    &,
    &:visited {
        color: $grey-color-dark;
    }
}

.site-nav {
    float: right;
    line-height: 56px;

    .menu-icon {
        display: none;
    }

    .page-link {
        color: $text-color;
        line-height: $base-line-height;

        // Gaps between nav items, but not on the first one
        &:not(:first-child) {
            margin-left: 20px;
        }
    }

    @include media-query($on-mobile) {
        position: absolute;
        top: 9px;
        right: 30px;
        background-color: $background-color;
        border: 1px solid $grey-color-light;
        border-radius: 5px;
        text-align: right;

        .menu-icon {
            display: block;
            float: right;
            width: 36px;
            height: 26px;
            line-height: 0;
            padding-top: 10px;
            text-align: center;

            > svg {
                width: 18px;
                height: 15px;

                path {
                    fill: $grey-color-dark;
                }
            }
        }

        .trigger {
            clear: both;
            display: none;
        }

        &:hover .trigger {
            display: block;
            padding-bottom: 5px;
        }

        .page-link {
            display: block;
            padding: 5px 10px;
        }
    }
}



/**
 * Page content
 */
.page-content {
    position: relative;
    padding: $spacing-unit 0;
}

.page-heading {
    font-size: 20px;
}

.post-list {
    margin-left: 0;
    list-style: none;

    > li {
        margin-bottom: $spacing-unit;
    }
}

.post-meta {
    font-size: $small-font-size;
    @include media-query($on-mobile) {
      font-size: $mobile-small-font-size;
    }
    color: $grey-color;
}

.post-meta .post-date {
  position: absolute;
  top: 1.5em;
  right: 25px;
  font-size: $small-font-size;
  @include media-query($on-mobile) {
    font-size: $mobile-small-font-size;
  }
  float: right;
  color: $grey-color;
  margin: 0;
  .post-date-day-month-year {
    margin-left: -0.2em;
    @include media-query($on-mobile) {
      display: none;
    }
  }
  &.post-date-upcoming {
    .post-date-year {
      display: none;
    }
  }
}



.post-link {
    display: block;
    font-size: 24px;
}



/**
 * Posts
 */
.post-header {
    margin-bottom: $spacing-unit;
}

.post-title {
  display: none;
}

.post-readings {
  border-top: 1px solid white;
}

.post-readings-additional {
  display: none;
}

#post-readings-additional-toggle {
  position: absolute;
  top: 1.5em;
  font-size: $small-font-size;
  @include media-query($on-mobile) {
    font-size: $mobile-small-font-size;
  }
  color: $grey-color;
  a {
    color: $grey-color;
    text-decoration: underline;
  }
}

.post-content {
    margin-top: 2em;
    margin-bottom: 12em;
    

    h2 {
      font-family: $heading-font-family;
      font-weight: 900;
      text-transform: uppercase;
      font-size: 1.1em;
      margin-bottom: 2em;
      margin-top: 3em;
      sup {
        text-transform: lowercase;
      }
    }

    h3 {
      font-size: $small-font-size;
      @include media-query($on-mobile) {
        font-size: $mobile-small-font-size;
      }
      color: $grey-color;
      margin-bottom: 1.5em;
    }

    h4 {
        font-size: 20px;

        @include media-query($on-laptop) {
            font-size: 18px;
        }
    }
}

.is-top.is-not-touch {
  .home {
    filter: blur(2px); // Blur it
    -webkit-filter: blur(2px); // Blur it
  }
}


@media print {
  .post-content {
    margin-bottom: 0;
    max-width: 80%;
    font-size: 0.8em;
  }
  
  .is-top.is-not-touch {
    .home {
      filter: none;
      -webkit-filter: none;
    }
  }
  
  #post-readings-additional-toggle {
    display: none;
  }
}

